--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: postgres:13
     restart: always
     env_file:
-      - ../postgres.env
+      - postgres.env
     ports:
       - "5432:5432"
     volumes:
@@ -15,7 +15,7 @@ services:
     image: busycaesar/llm_middleware_api
     restart: always
     env_file:
-      - ../llm_middleware.env
+      - llm_middleware.env
     ports:
       - "7000:7000"
 
