--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,13 @@
 services:
-  # For storing the content and the reference id.
   db:
-    image: postgres:13
+    image: pgvector/pgvector:pg16
     restart: always
     env_file:
-      - postgres.env
+      - .env
     ports:
       - "5432:5432"
     volumes:
-      - llm_apis_postgres:/var/lib/postgresql/data
-
-  # To interact with the llm.
-  llm_middleware:
-    image: busycaesar/llm_middleware_api
-    restart: always
-    env_file:
-      - llm_middleware.env
-    ports:
-      - "7000:7000"
+      - pg_data:/var/lib/postgresql/data
 
 volumes:
-  llm_apis_postgres:
+  pg_data:
